@@ -41,10 +41,47 @@ dependencies {
 
 tasks.withType(CheckForbiddenApisTask).configureEach {
   replaceSignatureFiles 'jdk-signatures'
+  exclude 'org/elasticsearch/entitlement/config/**.class'
 }
+
+tasks.named('javadoc') {
+  // Our configuration references all kinds of nasty internal types
+  exclude 'org/elasticsearch/entitlement/config/*'
+  // Explcitly include the main entrypoint, as it's referenced in EntitlementBoostrap
+  include 'org/elasticsearch/entitlement/config/MainInstrumentationProvider.java'
+}
+
+// We need to explicitly export these packages since we directly reference classes from them in our instrumentation config
+def exportedPackages = [
+  "jdk.jlink/jdk.tools.jlink.internal",
+  "jdk.internal.vm.ci/jdk.vm.ci.services",
+  "java.base/sun.net.www",
+  "java.base/sun.net.www.protocol.ftp",
+  "java.base/sun.net.www.protocol.file",
+  "java.base/sun.net.www.protocol.jar",
+  "java.base/sun.net.www.protocol.http",
+  "java.base/sun.net.www.protocol.https",
+  "java.base/sun.net.www.protocol.mailto",
+  "java.base/sun.nio.ch",
+  "java.base/jdk.internal.foreign",
+  "java.base/jdk.internal.foreign.abi",
+  "java.base/jdk.internal.foreign.layout",
+  "java.net.http/jdk.internal.net.http",
+  "jdk.jdi/com.sun.tools.jdi"
+]
 
 // invoke using ./gradlew :libs:entitlement:dumpInstrumentedMethods --args="<output file>"
 tasks.register('dumpInstrumentedMethods', JavaExec) {
   classpath = sourceSets.test.runtimeClasspath
   mainClass = 'org.elasticsearch.entitlement.initialization.DynamicInstrumentationUtils'
+  exportedPackages.each { jvmArgs("--add-opens", "${it}=ALL-UNNAMED")}
+}
+
+tasks.named('compileJava') {
+  options.release.unset()
+  exportedPackages.each { options.compilerArgs.addAll(["--add-exports", "${it}=org.elasticsearch.entitlement"])}
+}
+
+tasks.named('test') {
+  exportedPackages.each { jvmArgs("--add-opens", "${it}=ALL-UNNAMED")}
 }
